basic splash page wip

--- a/app/client/app.html
+++ b/app/client/app.html
@@ -6,5 +6,13 @@
 </body>
 
 <template name="Splash">
+	<div class="splash-template">
+		<h1>Nature Heals</h1>
+		<div class='button'>
+			<a href='/home'>Enter</a>
+		</div>
+	</div>
 </template>
 
+<template name="Home">
+</template>
