add momentjs, display diary

--- a/app/client/app.html
+++ b/app/client/app.html
@@ -35,5 +35,8 @@
 <template name="Observations">
 	<h3>Observations</h3>
 	{{> NavBar}}
-	{{observations}}
+	{{#each observations}}
+		{{this}}
+	{{/each}}
+	{{today}}
 </template>
