--- a/app/client/app.html
+++ b/app/client/app.html
@@ -30,6 +30,9 @@
 <template name="Map">
 	<h3>Map</h3>
 	{{> NavBar}}
+	<div class="map-container">
+		{{> googleMap name="mainMap" options=mapOptions}}
+	</div>
 </template>
 
 <template name="Observations">
