wip observations collection

--- a/app/client/observations/main.html
+++ b/app/client/observations/main.html
@@ -2,9 +2,7 @@
 	<h3>Observations</h3>
 	{{> NavBar}}
 	{{#each observations}}
-		{{this}}
+		{{content}}
 	{{/each}}
-	{{today}}
-	<p>doge</p>
 </template>
 
