Committing to pull back to master

--- a/app/client/observations/main.html
+++ b/app/client/observations/main.html
@@ -4,5 +4,9 @@
 	{{#each observations}}
 		{{content}}
 	{{/each}}
+	<form>
+		<textarea></textarea>
+		<input type='submit'/>
+	</form>
 </template>
 
