Delete and observation enabled

--- a/app/client/observations/main.html
+++ b/app/client/observations/main.html
@@ -2,7 +2,10 @@
 	<h3>Observations</h3>
 	{{> NavBar}}
 	{{#each observations}}
+	<div>
 		{{content}}
+		<button class="delete" data-id="{{_id}}">Delete</button>
+	</div>
 	{{/each}}
 	<form>
 		<textarea></textarea>
