--- a/app/client/main.html
+++ b/app/client/main.html
@@ -1,12 +1,13 @@
 <head>
 	<title>Nature Based Therapeutics</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
 </body>
 
 <template name="Layout">
-	<div class="content">
+	<div class="container-fluid">
 		{{> Header pageTitle='Nature Based Therapy'}}
 		{{> yield}}
 	</div>
@@ -14,7 +15,7 @@
 
 <template name="Splash">
 	<h1>Nature Heals</h1>
-	<div class='button'>
+	<div>
 		<a href='/home'>Enter</a>
 	</div>
 </template>
@@ -27,10 +28,27 @@
 		<a href="/home">Home</a>
 		<a href="/map">Map</a>
 		<a href="/observations">Observations Diary</a>
+		<a href="/identification">Identification</a>
+		<a href="/art">3030 Art</a>
 	</div>
+	<hr/>
 </template>
 
 <template name="Home">
+	<h2>Arboretum Happenings!</h2>
+	{{#each recentPost}}
+		<div>
+			<a href="{{link}}" target="_blank">
+				<h3>{{name}}</h3>
+			</a>
+			<p>{{message}}</p>
+			{{#if picture}}
+				<img src="{{picture}}"/>
+			{{/if}}
+		</div>
+	{{else}}
+		<p>Loading posts from Facebook</p>
+	{{/each}}
 </template>
 
 <template name="Map">
@@ -58,5 +76,19 @@
 			<input type='submit'/>
 		</form>
 	{{/unless}}
+</template>
+
+<template name="404">
+	{{> Header pageTitle="Nature Based Therapy"}}
+	<pre>
+ ______________________
+| 404 - Page not found |
+ ----------------------
+        \   ^__^
+         \  (oo)\_______
+            (__)\       )\/\
+                ||----w |
+                ||     ||
+	</pre>
 </template>
 
