Remove velociratchet and all unnecessary class tags

--- a/app/client/main.html
+++ b/app/client/main.html
@@ -7,8 +7,8 @@
 </body>
 
 <template name="Layout">
-	<div class="container-fluid">
-		{{> Header pageTitle='Nature Based Therapy'}}
+	{{> Header pageTitle='Nature Based Therapy'}}
+	<div>
 		{{> yield}}
 	</div>
 </template>
@@ -23,15 +23,14 @@
 <template name="Header">
 	<header>
 		<h1>{{pageTitle}}</h1>
+		<div>
+			<a href="/home">Home</a>
+			<a href="/map">Map</a>
+			<a href="/observations">Observations Diary</a>
+			<a href="/identification">Identification</a>
+			<a href="/art">3030 Art</a>
+		</div>
 	</header>
-	<div>
-		<a href="/home">Home</a>
-		<a href="/map">Map</a>
-		<a href="/observations">Observations Diary</a>
-		<a href="/identification">Identification</a>
-		<a href="/art">3030 Art</a>
-	</div>
-	<hr/>
 </template>
 
 <template name="Home">
@@ -90,5 +89,11 @@
                 ||----w |
                 ||     ||
 	</pre>
+</template>
+
+<template name="Art">
+</template>
+
+<template name="Identification">
 </template>
 
