--- a/app/client/main.html
+++ b/app/client/main.html
@@ -10,7 +10,7 @@
 
 <template name="Layout">
 	{{> Header pageTitle='Nature Based Therapy'}}
-	<div>
+	<div class="container">
 		{{> yield}}
 	</div>
 </template>
@@ -23,16 +23,24 @@
 </template>
 
 <template name="Header">
-	<header>
-		<h1>{{pageTitle}}</h1>
-		<div>
+	<nav class="navbar navbar-inverse navbar-fixed-top">
+		<div class="navbar-header">
+			<a class="navbar-brand">{{pageTitle}}</a>
+			<button type="button" class="navbar-toggle collapsed">
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			</button>
+		</div>
+
+		<div style="display:none;">
 			<a href="/home">Home</a>
 			<a href="/map">Map</a>
 			<a href="/observations">Observations Diary</a>
 			<a href="/identification">Identification</a>
 			<a href="/art">3030 Art</a>
 		</div>
-	</header>
+	</nav>
 </template>
 
 <template name="Home">
