--- a/app/client/main.html
+++ b/app/client/main.html
@@ -23,30 +23,43 @@
 </template>
 
 <template name="Header">
-	<nav class="navbar navbar-inverse navbar-fixed-top">
-		<div class="navbar-header">
-			<a class="navbar-brand">{{pageTitle}}</a>
-			<button type="button" class="navbar-toggle collapsed">
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-			</button>
-		</div>
+<nav class="navbar navbar-inverse navbar-fixed-top">
+	<div class="navbar-header">
+		<a class="navbar-brand">{{pageTitle}}</a>
+		<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+			<span class="sr-only">Toggle navigation</span>
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+		</button>
+	</div>
 
-		<div style="display:none;">
-			<a href="/home">Home</a>
-			<a href="/map">Map</a>
-			<a href="/observations">Observations Diary</a>
-			<a href="/identification">Identification</a>
-			<a href="/art">3030 Art</a>
-		</div>
-	</nav>
+	<div id="navbar" class="collapse navbar-collapse">
+		<ul class="nav navbar-nav">
+			<li>
+				<a href="/home">Home</a>
+			</li>
+			<li>
+				<a href="/map">Map</a>
+			</li>
+			<li>
+				<a href="/observations">Observations Diary</a>
+			</li>
+			<li>
+				<a href="/identification">Identification</a>
+			</li>
+			<li>
+				<a href="/art">3030 Art</a>
+			</li>
+		</ul>
+	</div>
+</nav>
 </template>
 
 <template name="Home">
 	<h2>Arboretum Happenings!</h2>
 	{{#each recentPost}}
-		<div>
+		<div class="well">
 			<a href="{{link}}" target="_blank">
 				<h3>{{name}}</h3>
 			</a>
@@ -56,7 +69,7 @@
 			{{/if}}
 		</div>
 	{{else}}
-		<p>Loading posts from Facebook</p>
+	<p>Loading posts from Facebook</p>
 	{{/each}}
 </template>
 
@@ -66,38 +79,38 @@
 	</div>
 	{{#if isCordova}}
 	{{else}}
-		<p>Sorry, you need to use a device to get path data</p>
+	<p>Sorry, you need to use a device to get path data</p>
 	{{/if}}
 </template>
 
 <template name="Observations">
-	<h3>Observations</h3>
-	<p class="show-all">Show {{#if showAll}}just today's{{else}}all{{/if}}</p>
-	{{#each observations}}
-		<div>
-			{{content}}
-			<button class="delete" data-id="{{_id}}">Delete</button>
-		</div>
+		<h3>Observations</h3>
+		<p class="show-all">Show {{#if showAll}}just today's{{else}}all{{/if}}</p>
+		{{#each observations}}
+	<div>
+		{{content}}
+		<button class="delete" data-id="{{_id}}">Delete</button>
+	</div>
 	{{/each}}
 	{{#unless showAll}}
-		<form>
-			<textarea></textarea>
-			<input type='submit'/>
-		</form>
+	<form>
+		<textarea></textarea>
+		<input type='submit'/>
+	</form>
 	{{/unless}}
 </template>
 
 <template name="404">
 	{{> Header pageTitle="Nature Based Therapy"}}
 	<pre>
- ______________________
-| 404 - Page not found |
- ----------------------
-        \   ^__^
-         \  (oo)\_______
-            (__)\       )\/\
-                ||----w |
-                ||     ||
+	 ______________________
+	| 404 - Page not found |
+	 ----------------------
+			\   ^__^
+			 \  (oo)\_______
+				(__)\       )\/\
+					||----w |
+					||     ||
 	</pre>
 </template>
 
