--- a/app/client/main.html
+++ b/app/client/main.html
@@ -59,14 +59,16 @@
 <template name="Home">
 	<h2>Arboretum Happenings!</h2>
 	{{#each recentPost}}
-		<div class="well">
-			<a href="{{link}}" target="_blank">
-				<h3>{{name}}</h3>
-			</a>
-			<p>{{message}}</p>
-			{{#if picture}}
-				<img src="{{picture}}"/>
-			{{/if}}
+		<div class="panel panel-default">
+			<div class="panel-body">
+				<a href="{{link}}" target="_blank">
+					{{#if name}}<h3>{{name}}</h3>{{/if}}
+				</a>
+				<p>{{message}}</p>
+				{{#if picture}}
+					<img src="{{picture}}"/>
+				{{/if}}
+			</div>
 		</div>
 	{{else}}
 	<p>Loading posts from Facebook</p>
