wip reconnecting delete buttons

--- a/app/client/main.html
+++ b/app/client/main.html
@@ -92,21 +92,25 @@
 </template>
 
 <template name="Observations">
+	<div>
 		<h3>Observations</h3>
-		<p class="show-all">Show {{#if showAll}}just today's{{else}}all{{/if}}</p>
-		{{#each observations}}
-	<div class="well">
-		{{content}}
-		<button type="button" class="delete btn btn-default" data-id="{{_id}}">
-			<span class="glyphicon glyphicon-trash"></span>
-		</button>
 	</div>
+	<button class="btn btn-primary show-all">Show {{#if showAll}}just today's{{else}}all{{/if}}</button>
+	{{#each observations}}
+		<div class="well">
+			{{content}}
+			<button type="button" class="delete btn btn-default" data-id="{{_id}}">
+				<span class="glyphicon glyphicon-trash"></span>
+			</button>
+		</div>
 	{{/each}}
 	{{#unless showAll}}
-	<form>
-		<textarea></textarea>
-		<input type='submit'/>
-	</form>
+		<div class="input-group">
+			<input type="text" class="form-control" placeholder="Write something you've observed..."/>
+			<span class="input-group-btn">
+				<button type="button" class="record btn btn-default">Record</button>
+			</span>
+		</div>
 	{{/unless}}
 </template>
 
