--- a/app/client/main.html
+++ b/app/client/main.html
@@ -19,7 +19,7 @@
 <nav class="navbar navbar-inverse navbar-fixed-top">
 	<div class="navbar-header">
 		<a class="navbar-brand">{{pageTitle}}</a>
-		<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+		<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
 			<span class="sr-only">Toggle navigation</span>
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>
@@ -51,27 +51,37 @@
 
 <template name="Home">
 	<h2>Arboretum Happenings!</h2>
-	{{#each recentPost}}
-		<div class="panel panel-default">
-			{{#if name}}
-				<div class="panel-heading">
-					<div class="panel-title">
-						<a href="{{link}}" target="_blank">
-							{{name}}
-						</a>
+	<div class="panel panel-default">
+		{{#each recentPost}}
+				{{#if name}}
+					<div class="panel-heading">
+						<div class="panel-title">
+							{{#if link}}
+								<a href="{{link}}" target="_blank">
+									{{name}}
+								</a>
+							{{else}}
+								{{name}}
+							{{/if}}
+						</div>
 					</div>
-				</div>
-			{{/if}}
-			<div class="panel-body">
-				<p>{{message}}</p>
-				{{#if picture}}
-					<img src="{{picture}}"/>
 				{{/if}}
+				{{#if message}}
+					<div class="panel-body">
+						<p>{{message}}</p>
+						{{#if picture}}
+							<img src="{{picture}}"/>
+						{{/if}}
+					</div>
+				{{/if}}
+		{{else}}
+			<div class="panel-heading">
+				<div class="panel-title">
+					Loading posts from Facebook
+				</div>
 			</div>
-		</div>
-	{{else}}
-	<p>Loading posts from Facebook</p>
-	{{/each}}
+		{{/each}}
+	</div>
 </template>
 
 <template name="Map">
