--- a/app/client/main.html
+++ b/app/client/main.html
@@ -16,41 +16,32 @@
 </template>
 
 <template name="Header">
-<nav class="navbar navbar-inverse navbar-fixed-top">
-	<div class="navbar-header">
-		<a class="navbar-brand">{{pageTitle}}</a>
-		<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
-			<span class="sr-only">Toggle navigation</span>
-			<span class="icon-bar"></span>
-			<span class="icon-bar"></span>
-			<span class="icon-bar"></span>
-		</button>
-	</div>
+	<nav class="navbar navbar-inverse navbar-fixed-top">
+		<div class="navbar-header">
+			<a class="navbar-brand">{{pageTitle}}</a>
+			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
+				<span class="sr-only">Toggle navigation</span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			</button>
+		</div>
 
-	<div id="navbar" class="collapse navbar-collapse">
-		<ul class="nav navbar-nav">
-			<li>
-				<a href="/home">Home</a>
-			</li>
-			<li>
-				<a href="/map">Map</a>
-			</li>
-			<li>
-				<a href="/observations">Observations Diary</a>
-			</li>
-			<li>
-				<a href="/identification">Identification</a>
-			</li>
-			<li>
-				<a href="/art">3030 Art</a>
-			</li>
-		</ul>
+	</nav>
+</template>
+
+<template name="Splash">
+	<div class="splash">
+		<img class="splash-logo" src="/logo.png"/>
+		<div class="splash-enter">
+			<a href="/home">Enter</a>
+		</div>
 	</div>
-</nav>
 </template>
 
 <template name="Home">
 <h2><a href="http://www.arboretum.umn.edu/" target="_blank">Arboretum</a> Happenings!</h2>
+	<!--
 	{{#each recentPost}}
 		<div class="panel panel-default">
 			{{#if name}}
@@ -82,6 +73,26 @@
 			</div>
 		</div>
 	{{/each}}
+	-->
+	<div>
+		<ul>
+			<li>
+				<a href="/home">Home</a>
+			</li>
+			<li>
+				<a href="/map">Map</a>
+			</li>
+			<li>
+				<a href="/observations">Observations Diary</a>
+			</li>
+			<li>
+				<a href="/identification">Identification</a>
+			</li>
+			<li>
+				<a href="/art">3030 Art</a>
+			</li>
+		</ul>
+	</div>
 </template>
 
 <template name="Map">
