Place mapbox map on map2 route

--- a/app/client/main.html
+++ b/app/client/main.html
@@ -71,6 +71,11 @@
 	</div>
 </template>
 
+<template name="Map2">
+	<p>Mapbox</p>
+	<div id="map"></div>
+</template>
+
 <template name="Observations">
 	<div>
 		<h3>Observations</h3>
