--- a/app/client/main.html
+++ b/app/client/main.html
@@ -11,7 +11,12 @@
 <template name="Layout">
 	<nav class="navbar navbar-inverse navbar-fixed-top">
 		<div class="navbar-header">
-			<a class="navbar-brand">{{pageTitle}}</a>
+			<button type="button" class="btn btn-default navbar-btn">
+				<span class="glyphicon glyphicon-arrow-left"></span>
+			</button>
+			<a class="navbar-text">
+				{{pageTitle}}
+			</a>
 		</div>
 	</nav>
 	<div class="container">
