--- a/app/client/main.html
+++ b/app/client/main.html
@@ -11,9 +11,11 @@
 <template name="Layout">
 	<nav class="navbar navbar-inverse navbar-fixed-top">
 		<div class="navbar-header">
-			<button type="button" class="btn btn-default navbar-btn">
-				<span class="glyphicon glyphicon-arrow-left"></span>
-			</button>
+			<a href="/home">
+				<button type="button" class="btn btn-default navbar-btn">
+					<span class="glyphicon glyphicon-arrow-left"></span>
+				</button>
+			</a>
 			<a class="navbar-text">
 				{{pageTitle}}
 			</a>
@@ -35,17 +37,12 @@
 
 <template name="Home">
 	<div>
-		<button>Arboretum</button>
-		<button>Map</button>
-		<button>Observations Diary</button>
-		<button>Identification</button>
-		<button>3030 Project</button>
-		<!-- <ul>
+		<ul>
 			<li>
-				<a href="/home">Home</a>
+				<a href="/map">Google Maps</a>
 			</li>
 			<li>
-				<a href="/map">Map</a>
+				<a href="/map2">Mapbox</a>
 			</li>
 			<li>
 				<a href="/observations">Observations Diary</a>
@@ -56,7 +53,7 @@
 			<li>
 				<a href="/art">3030 Art</a>
 			</li>
-		</ul> -->
+		</ul>
 	</div>
 </template>
 
@@ -119,7 +116,9 @@
 
 <template name="Identification">
 	<div class="panel panel-default">
-		<h3>Birds</h3>
+		<div class="panel-heading">
+			Birds
+		</div>
 		<div class="panel-body">
 			<ul>
 				<li><a href="http://merlin.allaboutbirds.org/" target="_blank">Download the Merlin Bird Identification App</a></li>
