splash: new font, nature heals and logo links directly

--- a/app/client/main.html
+++ b/app/client/main.html
@@ -28,8 +28,12 @@
 
 <template name="Splash">
 	<div class="splash">
-		<img class="splash-logo" src="/logo.png"/>
+		<a href="/art">
+			<img class="splash-logo" src="/logo.png"/>
+		</a>
 		<div class="splash-enter">
+			NATURE HEALS
+			<br>
 			<a href="/home">Enter</a>
 		</div>
 	</div>
