Links are all buttons

--- a/app/client/main.html
+++ b/app/client/main.html
@@ -32,23 +32,11 @@
 
 <template name="Home">
 	<div>
-		<ul>
-			<li>
-				<a href="/map">Google Maps</a>
-			</li>
-			<li>
-				<a href="/map2">Mapbox</a>
-			</li>
-			<li>
-				<a href="/observations">Observations Diary</a>
-			</li>
-			<li>
-				<a href="/identification">Identification</a>
-			</li>
-			<li>
-				<a href="/art">3030 Art</a>
-			</li>
-		</ul>
+		<div class="btn"><a href="/map">Google Maps</a></div>
+		<div class="btn"><a href="/map2">Mapbox</a></div>
+		<div class="btn"><a href="/observations">Observations Diary</a></div>
+		<div class="btn"><a href="/identification">Identification</a></div>
+		<div class="btn"><a href="/art">3030 Art</a></div>
 	</div>
 </template>
 
