remove googlemaps button from homepage and rename mapbox to map

--- a/app/client/main.html
+++ b/app/client/main.html
@@ -37,8 +37,7 @@
 
 <template name="Home">
 	<div>
-		<div class="btn"><a href="/map">Google Maps</a></div>
-		<div class="btn"><a href="/map2">Mapbox</a></div>
+		<div class="btn"><a href="/map">Map</a></div>
 		<div class="btn"><a href="/observations">Observations Diary</a></div>
 		<div class="btn"><a href="/identification">Identification</a></div>
 		<div class="btn"><a href="/art">3030 Art</a></div>
