Restructuring the home page to have leaves as buttons

--- a/app/client/main.html
+++ b/app/client/main.html
@@ -38,8 +38,8 @@
 </template>
 
 <template name="Home">
-	<div>
-		<div class="btn"><a href="/map">Map</a></div>
+	<div class="navigation">
+		<a href="/map"><div class="map-btn btn animated rotateIn"><div class="text">Map</div></div></a>
 		<div class="btn"><a href="/observations">Observations Diary</a></div>
 		<div class="btn"><a href="/identification">Identification</a></div>
 		<div class="btn"><a href="/art">3030 Art</a></div>
