The home button is now a pretty leaf

--- a/app/client/main.html
+++ b/app/client/main.html
@@ -14,8 +14,10 @@
 	</div>
 	{{#unless isHome}}
 		<a href="/home">
-			<div class="back-btn">
-				Home
+			<div class="leaf back-btn">
+				<div class="text">
+					Home
+				</div>
 			</div>
 		</a>
 	{{/unless}}
