using lisa's images for the background made three of four leaves look nice

--- a/app/client/main.html
+++ b/app/client/main.html
@@ -44,7 +44,7 @@
 		</a>
 		<a href="/observations">
 			<div class="observations-btn leaf animated fadeIn">
-				<div class="text">Observations Diary</div>
+				<div class="text">Observations<br/>Diary</div>
 			</div>
 		</a>
 		<a href="/identification">
