rotate leaf 2 move the leaves down and remove the art link

--- a/app/client/main.html
+++ b/app/client/main.html
@@ -37,26 +37,26 @@
 
 <template name="Home">
 	<div class="navigation">
-		<a href="/map">
-			<div class="map-btn leaf animated fadeIn">
+		<div class="btn map-btn leaf animated fadeIn">
+			<a href="/map">
 				<div class="text">Map</div>
-			</div>
-		</a>
-		<a href="/observations">
-			<div class="observations-btn leaf animated fadeIn">
+			</a>
+		</div>
+		<div class="btn observations-btn leaf animated fadeIn">
+			<a href="/observations">
 				<div class="text">Observations<br/>Diary</div>
-			</div>
-		</a>
-		<a href="/identification">
-			<div class="identification-btn leaf animated fadeIn">
+			</a>
+		</div>
+		<div class="btn identification-btn leaf animated fadeIn">
+			<a href="/identification">
 				<div class="text">Identification</div>
-			</div>
-		</a>
-		<a href="/Art">
-			<div class="art-btn leaf animated fadeIn">
+			</a>
+		</div>
+		<!-- <div class="btn art-btn leaf animated fadeIn">
+			<a href="/Art">
 				<div class="text">3030 Art</div>
-			</div>
-		</a>
+			</a>
+		</div> -->
 	</div>
 </template>
 
