I learned today that you can name an iron route. Sometimes the magic is so good it seems like it should be a rule and It doesn't even have the code smellz

--- a/app/client/main.html
+++ b/app/client/main.html
@@ -13,7 +13,7 @@
 		{{> yield}}
 	</div>
 	<a href="/home">
-		<div class="leaf back-btn animated {{#unless isHome}}bounceInUp{{else}}bounceOutDown{{/unless}}">
+		<div class="leaf back-btn animated {{showHomeButton}}">
 			<div class="text">
 				Home
 			</div>
