--- a/app/client/main.html
+++ b/app/client/main.html
@@ -9,7 +9,7 @@
 </body>
 
 <template name="Layout">
-	<div class="container">
+	<div class="container animated fadeIn">
 		{{> yield}}
 	</div>
 	<a href="/home">
