fit text to size of screen in popups

--- a/app/client/popup/popup.html
+++ b/app/client/popup/popup.html
@@ -1,7 +1,9 @@
 <template name="Popup">
 	{{#unless hidden}}
-		<div id="observations-msg">
-			{{> Template.contentBlock}}
+		<div id="popup-msg">
+			<div id="popup-msg-content">
+				{{> Template.contentBlock}}
+			</div>
 			<div class="button close">Close</div>
 			<div class="button dontShow">Don't show this message again</div>
 		</div>
